--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
 Collins Ochieng <ochiengcollinsoduor2@gmail.com>
-Steffanie Chepkirui <@gmail.com>
+Steffanie Chepkirui <chepkiruistephanie514@gmail.com>
